# travel_buddy

./: .env.example  .gitignore  FREE_API_GUIDE.md  FREE_API_GUIDE.txt  README.md  export_guide.md  main.py  pyproject.toml  vscode_setup.md  wikipedia_api_example.py
.streamlit/: config.toml
assets/: style.css
components/: displays.py  forms.py
travel/: pyvenv.cfg
travel/Scripts/: activate  activate.bat
utils/: api_handlers.py  itinerary_generator.py  place_images.py
